nucleo-picker-vt/tests/scenarios/snapshots/scenarios__multiline__multiline_default@default-width-reset-2.snap
---
source: nucleo-picker-vt/tests/scenarios/multiline.rs
expression: sr.checkpoint(resolved_name.to_owned())?
info:
  resolved_name: default-width-reset-2
  name_expression: "format!(\"default-width-reset-{cols}\")"
  sequence: 12
---
version: 1
size:
  cols: 60
  rows: 16
screen: alternate
cursor:
  position:
    x: 2
    y: 15
  visible: true
  shape: block
  blinking: false
  pending_wrap: false
  at_wide_tail: false
  password_input: false
colors:
  foreground: "#ffffff"
  background: "#000000"
  cursor: ~
text:
  - "  item-05                                                   "
  - "    detail-05-a                                             "
  - "    detail-05-b                                             "
  - "    detail-05-c                                             "
  - "  item-04                                                   "
  - "    detail-04-a                                             "
  - "  item-03                                                   "
  - "  item-02                                                   "
  - "    detail-02-a                                             "
  - "    detail-02-b                                             "
  - "    detail-02-c                                             "
  - "  item-01                                                   "
  - "    detail-01-a                                             "
  - "▌ item-00                                                   "
  - "  24/24 ────────────────────────────────────────────────────"
  - ">                                                           "
styles:
  - row: 13
    start: 0
    end: 1
    foreground: "#c397d8"
    background: "#666666"
    bold: true
  - row: 13
    start: 1
    end: 9
    background: "#666666"
    bold: true
  - row: 14
    start: 0
    end: 7
    foreground: "#b9ca4a"
    italic: true
  - row: 14
    start: 7
    end: 60
    foreground: "#c5c8c6"
    italic: true
